--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,5 +1,41 @@
 @use 'variables';
 
 #home {
-    padding: 100px;
+    height: calc(100vh - #{variables.$navbar-height});
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+
+    #home-text {
+        font-size: 2rem;
+        font-family: variables.$main-font;
+        background: blue;
+    }
+
+    #home-collage {
+        position: relative;
+        height: 400px;
+        width: 500px;
+        margin-left: 200px;
+
+        .home-img {
+            position: absolute;
+            border-radius: 20px;
+            overflow: hidden;
+        }
+
+        #img-1 {
+            top: -300px;
+            left: -300px;
+            height: 520px;
+            width: 390px;
+        }
+
+        #img-2 {
+            bottom: 0;
+            height: 600px;
+            width: 800px;
+        }
+    }
 }
