--- a/src/styles/Navbar.module.scss
+++ b/src/styles/Navbar.module.scss
@@ -1,9 +1,10 @@
 @use "variables";
 
 #navbar {
+    height: variables.$navbar-height;
     width: 100%;
     background: variables.$main-color;
-    padding: 16px 32px;
+    padding: 0 32px;
     display: flex;
     justify-content: space-between;
     align-items: center;
