Basic home layout

--- a/src/styles/Footer.module.scss
+++ b/src/styles/Footer.module.scss
@@ -3,7 +3,7 @@
 #footer {
     padding: 32px;
     width: 100%;
-    background: variables.$main-color;
+    background: variables.$accent-color;
     text-align: center;
     font-family: variables.$title-font;
     font-size: 1.5rem;
