--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,7 +3,8 @@ $title-font: "Leckerli One", cursive;
 $main-font: "Varela Round", sans-serif;
 
 // Color themes
-$main-color: pink;
+$main-color: rgb(253, 205, 213);
+$accent-color: rgb(245, 253, 169);
 
 // Page sizing
 $navbar-height: 100px;
