--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -7,35 +7,14 @@
     justify-content: space-evenly;
     align-items: center;
 
+    #image-wrapper {
+        overflow: hidden;
+        border-radius: 30px;
+        filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.8));
+    }
+
     #home-text {
         font-size: 2rem;
         font-family: variables.$main-font;
-        background: blue;
-    }
-
-    #home-collage {
-        position: relative;
-        height: 400px;
-        width: 500px;
-        margin-left: 200px;
-
-        .home-img {
-            position: absolute;
-            border-radius: 20px;
-            overflow: hidden;
-        }
-
-        #img-1 {
-            top: -300px;
-            left: -300px;
-            height: 520px;
-            width: 390px;
-        }
-
-        #img-2 {
-            bottom: 0;
-            height: 600px;
-            width: 800px;
-        }
     }
 }
