--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -9,7 +9,7 @@ body {
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
 		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    background: variables.$main-color;
+	background: variables.$main-color;
 
 	a {
 		color: inherit;
@@ -19,4 +19,18 @@ body {
 
 * {
 	box-sizing: border-box;
+}
+
+::-webkit-scrollbar {
+	width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+	background: #888;
+	opacity: 0.7;
+	border-radius: 2px;
+}
+
+::-webkit-scrollbar-track {
+	background: #f1f1f1;
 }
