Attempt font fix

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,6 @@
+// Import Google fonts
+@import url("https://fonts.googleapis.com/css2?family=Leckerli+One&family=Varela+Round&display=swap");
+
 // Fonts
 $title-font: "Leckerli One", cursive;
 $main-font: "Varela Round", sans-serif;
