--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,23 +1,54 @@
 @use "variables";
 
 #home {
-	height: calc(100vh - #{variables.$navbar-height});
+	min-height: calc(100vh - #{variables.$navbar-height});
 	width: 100%;
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
+	padding: 64px;
 
-	#image-wrapper {
-		overflow: hidden;
-		border-radius: 30px;
-		filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.8));
+	#image-container {
+		#image-wrapper {
+			overflow: hidden;
+			border-radius: 30px;
+			filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.8));
+		}
+
+        #main-title {
+			font-family: variables.$title-font;
+            font-size: 2.5rem;
+            text-align: center;
+		}
 	}
 
 	#recent-posts-container {
-		h2 {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+
+		#recent-posts-header {
 			font-size: 2rem;
+			letter-spacing: 1px;
 			font-family: variables.$main-font;
-            text-decoration: underline;
+			text-decoration: underline;
+			text-align: center;
 		}
+
+		#recent-posts-list {
+			list-style: none;
+			padding-left: 0;
+		}
+
+		#see-more-link {
+			font-family: variables.$main-font;
+			font-size: 1.5rem;
+		}
+	}
+}
+
+@media (hover: hover) {
+	#home > #recent-posts-container > #see-more-link:hover {
+		text-decoration: underline;
 	}
 }
