--- a/src/styles/Footer.module.scss
+++ b/src/styles/Footer.module.scss
@@ -7,4 +7,6 @@
     text-align: center;
     font-family: variables.$title-font;
     font-size: 1.5rem;
+    filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.5));
+
 }
