--- a/src/styles/Navbar.module.scss
+++ b/src/styles/Navbar.module.scss
@@ -9,6 +9,7 @@
     justify-content: space-between;
     align-items: center;
     color: black;
+    filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.3));
 
     #site-title {
         font-family: variables.$title-font;
