--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,7 +1,6 @@
 @use "variables";
 
-// Import Google fonts
-@import url("https://fonts.googleapis.com/css2?family=Leckerli+One&family=Varela+Round&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Kurale&display=swap');
 
 html,
 body {
