--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,7 +1,8 @@
-@use "variables";
+@use "constants";
 
 #home {
-	min-height: calc(100vh - #{variables.$navbar-height});
+	min-height: calc(100vh - #{constants.$navbar-height});
+    background: constants.$main-color;
 	width: 100%;
 	display: flex;
 	justify-content: space-evenly;
@@ -16,7 +17,7 @@
 		}
 
         #main-title {
-			font-family: variables.$title-font;
+			font-family: constants.$title-font;
             font-size: 2.5rem;
             text-align: center;
 		}
@@ -25,12 +26,11 @@
 	#recent-posts-container {
 		display: flex;
 		flex-direction: column;
-		align-items: center;
 
 		#recent-posts-header {
 			font-size: 2rem;
 			letter-spacing: 1px;
-			font-family: variables.$main-font;
+			font-family: constants.$main-font;
 			text-decoration: underline;
 			text-align: center;
 		}
@@ -41,8 +41,9 @@
 		}
 
 		#see-more-link {
-			font-family: variables.$main-font;
-			font-size: 1.5rem;
+			font-family: constants.$main-font;
+			font-size: 1rem;
+            text-align: right;
 		}
 	}
 }
